--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-weight: bold;   
     width: 100px;
     background-color: rgb(247, 244, 242);
-    border-radius: 8px;
+    border-radius: 10px;
     border-color: teal;
     margin-bottom: 10px;
     display: block;
@@ -27,4 +27,5 @@
     box-shadow: black;
     display: block;
     margin-top: 20px;
+    box-shadow: 3px 3px black;
 }
